src/frontend/VslParser.java
// $ANTLR 3.4 /home/heyoen/workspace/VSL/bin/frontend/VslParser.g 2016-02-26 10:34:13
package frontend;

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class VslParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AD", "AG", "ASCII", "ASSIGN_KW", "CD", "CG", "COMMENT", "DIGIT", "DIV", "DO_KW", "ELSE_KW", "FI_KW", "FUNC_KW", "IDENT", "IF_KW", "INTEGER", "INT_KW", "LETTER", "MOINS", "MUL", "OD_KW", "PD", "PG", "PLUS", "PRINT_KW", "PROTO_KW", "READ_KW", "RETURN_KW", "TEXT", "THEN_KW", "VIRG", "VOID_KW", "WHILE_KW", "WS", "APPEL_FONCTION", "BLOC", "CONDITION", "CORPS", "DECLARATION", "INSTRUCTION", "PARAMETRE", "PROGRAMME", "TABLEAU", "TABLEAU_DECLARATION", "TABLEAU_ELEMENT"
    };

    public static final int EOF=-1;
    public static final int AD=4;
    public static final int AG=5;
    public static final int ASCII=6;
    public static final int ASSIGN_KW=7;
    public static final int CD=8;
    public static final int CG=9;
    public static final int COMMENT=10;
    public static final int DIGIT=11;
    public static final int DIV=12;
    public static final int DO_KW=13;
    public static final int ELSE_KW=14;
    public static final int FI_KW=15;
    public static final int FUNC_KW=16;
    public static final int IDENT=17;
    public static final int IF_KW=18;
    public static final int INTEGER=19;
    public static final int INT_KW=20;
    public static final int LETTER=21;
    public static final int MOINS=22;
    public static final int MUL=23;
    public static final int OD_KW=24;
    public static final int PD=25;
    public static final int PG=26;
    public static final int PLUS=27;
    public static final int PRINT_KW=28;
    public static final int PROTO_KW=29;
    public static final int READ_KW=30;
    public static final int RETURN_KW=31;
    public static final int TEXT=32;
    public static final int THEN_KW=33;
    public static final int VIRG=34;
    public static final int VOID_KW=35;
    public static final int WHILE_KW=36;
    public static final int WS=37;
    public static final int APPEL_FONCTION=38;
    public static final int BLOC=39;
    public static final int CONDITION=40;
    public static final int CORPS=41;
    public static final int DECLARATION=42;
    public static final int INSTRUCTION=43;
    public static final int PARAMETRE=44;
    public static final int PROGRAMME=45;
    public static final int TABLEAU=46;
    public static final int TABLEAU_DECLARATION=47;
    public static final int TABLEAU_ELEMENT=48;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public VslParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public VslParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return VslParser.tokenNames; }
    public String getGrammarFileName() { return "/home/heyoen/workspace/VSL/bin/frontend/VslParser.g"; }


    public static class program_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "program"
    // /home/heyoen/workspace/VSL/bin/frontend/VslParser.g:25:1: program : ( unite )+ -> ^( PROGRAMME ( unite )+ ) ;
    public final VslParser.program_return program() throws RecognitionException {
        VslParser.program_return retval = new VslParser.program_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        VslParser.unite_return unite1 =null;


        RewriteRuleSubtreeStream stream_unite=new RewriteRuleSubtreeStream(adaptor,"rule unite");
        try {
            // /home/heyoen/workspace/VSL/bin/frontend/VslParser.g:25:16: ( ( unite )+ -> ^( PROGRAMME ( unite )+ ) )
            // /home/heyoen/workspace/VSL/bin/frontend/VslParser.g:25:18: ( unite )+
            {
            // /home/heyoen/workspace/VSL/bin/frontend/VslParser.g:25:18: ( unite )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==FUNC_KW||LA1_0==PROTO_KW) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /home/heyoen/workspace/VSL/bin/frontend/VslParser.g:25:18: unite
            	    {
            	    pushFollow(FOLLOW_unite_in_program120);
            	    unite1=unite();

            	    state._fsp--;

            	    stream_unite.add(unite1.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            // AST REWRITE
            // elements: unite
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 26:18: -> ^( PROGRAMME ( unite )+ )
            {
                // /home/heyoen/workspace/VSL/bin/frontend/VslParser.g:26:21: ^( PROGRAMME ( unite )+ )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(PROGRAMME, "PROGRAMME")
                , root_1);

                if ( !(stream_unite.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_unite.hasNext() ) {
                    adaptor.addChild(root_1, stream_unite.nextTree());

                }
                stream_unite.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "program"


    public static class unite_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "unite"
    // /home/heyoen/workspace/VSL/bin/frontend/VslParser.g:28:1: unite : ( fonction | prototype );
    public final VslParser.unite_return unite() throws RecognitionException {
        VslParser.unite_return retval = new VslParser.unite_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        VslParser.fonction_return fonction2 =null;

        VslParser.prototype_return prototype3 =null;



        try {
            // /home/heyoen/workspace/VSL/bin/frontend/VslParser.g:28:16: ( fonction | prototype )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==FUNC_KW) ) {
                alt2=1;
            }
            else if ( (LA2_0==PROTO_KW) ) {
                alt2=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;

            }
            switch (alt2) {
                case 1 :
                    // /home/heyoen/workspace/VSL/bin/frontend/VslParser.g:28:18: fonction
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_fonction_in_unite165);
                    fonction2=fonction();

                    state._fsp--;

                    adaptor.addChild(root_0, fonction2.getTree());

                    }
                    break;
                case 2 :
                    // /home/heyoen/workspace/VSL/bin/frontend/VslParser.g:28:29: prototype
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_prototype_in_unite169);
                    prototype3=prototype();

                    state._fsp--;

                    adaptor.addChild(root_0, prototype3.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "unite"


    public static class fonction_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "fonction"
    // /home/heyoen/workspace/VSL/bin/frontend/VslParser.g:30:1: fonction : FUNC_KW type IDENT PG parametres PD instruction -> ^( FUNC_KW type IDENT parametres ^( CORPS instruction ) ) ;
    public final VslParser.fonction_return fonction() throws RecognitionException {
        VslParser.fonction_return retval = new VslParser.fonction_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token FUNC_KW4=null;
        Token IDENT6=null;
        Token PG7=null;
        Token PD9=null;
        VslParser.type_return type5 =null;

        VslParser.parametres_return parametres8 =null;

        VslParser.instruction_return instruction10 =null;


        Object FUNC_KW4_tree=null;
        Object IDENT6_tree=null;
        Object PG7_tree=null;
        Object PD9_tree=null;
        RewriteRuleTokenStream stream_IDENT=new RewriteRuleTokenStream(adaptor,"token IDENT");
        RewriteRuleTokenStream stream_PD=new RewriteRuleTokenStream(adaptor,"token PD");
        RewriteRuleTokenStream stream_PG=new RewriteRuleTokenStream(adaptor,"token PG");
        RewriteRuleTokenStream stream_FUNC_KW=new RewriteRuleTokenStream(adaptor,"token FUNC_KW");
        RewriteRuleSubtreeStream stream_parametres=new RewriteRuleSubtreeStream(adaptor,"rule parametres");
        RewriteRuleSubtreeStream stream_instruction=new RewriteRuleSubtreeStream(adaptor,"rule instruction");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        try {
            // /home/heyoen/workspace/VSL/bin/frontend/VslParser.g:30:16: ( FUNC_KW type IDENT PG parametres PD instruction -> ^( FUNC_KW type IDENT parametres ^( CORPS instruction ) ) )
            // /home/heyoen/workspace/VSL/bin/frontend/VslParser.g:30:18: FUNC_KW type IDENT PG parametres PD instruction
            {
            FUNC_KW4=(Token)match(input,FUNC_KW,FOLLOW_FUNC_KW_in_fonction183);  
            stream_FUNC_KW.add(FUNC_KW4);


            pushFollow(FOLLOW_type_in_fonction185);
            type5=type();

            state._fsp--;

            stream_type.add(type5.getTree());

            IDENT6=(Token)match(input,IDENT,FOLLOW_IDENT_in_fonction187);  
            stream_IDENT.add(IDENT6);


            PG7=(Token)match(input,PG,FOLLOW_PG_in_fonction189);  
            stream_PG.add(PG7);


            pushFollow(FOLLOW_parametres_in_fonction191);
            parametres8=parametres();

            state._fsp--;

            stream_parametres.add(parametres8.getTree());

            PD9=(Token)match(input,PD,FOLLOW_PD_in_fonction193);  
            stream_PD.add(PD9);


            pushFollow(FOLLOW_instruction_in_fonction195);
            instruction10=instruction();

            state._fsp--;

            stream_instruction.add(instruction10.getTree());

            // AST REWRITE
            // elements: instruction, type, parametres, FUNC_KW, IDENT
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 31:18: -> ^( FUNC_KW type IDENT parametres ^( CORPS instruction ) )
            {
                // /home/heyoen/workspace/VSL/bin/frontend/VslParser.g:31:21: ^( FUNC_KW type IDENT parametres ^( CORPS instruction ) )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                stream_FUNC_KW.nextNode()
                , root_1);

                adaptor.addChild(root_1, stream_type.nextTree());

                adaptor.addChild(root_1, 
                stream_IDENT.nextNode()
                );

                adaptor.addChild(root_1, stream_parametres.nextTree());

                // /home/heyoen/workspace/VSL/bin/frontend/VslParser.g:31:53: ^( CORPS instruction )
                {
                Object root_2 = (Object)adaptor.nil();
                root_2 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(CORPS, "CORPS")
                , root_2);

                adaptor.addChild(root_2, stream_instruction.nextTree());

                adaptor.addChild(root_1, root_2);
                }

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "fonction"


    public static class prototype_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "prototype"
    // /home/heyoen/workspace/VSL/bin/frontend/VslParser.g:33:1: prototype : PROTO_KW ^ type IDENT PG ! parametres PD !;
    public final VslParser.prototype_return prototype() throws RecognitionException {
        VslParser.prototype_return retval = new VslParser.prototype_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token PROTO_KW11=null;
        Token IDENT13=null;
        Token PG14=null;
        Token PD16=null;
        VslParser.type_return type12 =null;

        VslParser.parametres_return parametres15 =null;


        Object PROTO_KW11_tree=null;
        Object IDENT13_tree=null;
        Object PG14_tree=null;
        Object PD16_tree=null;

        try {
            // /home/heyoen/workspace/VSL/bin/frontend/VslParser.g:33:16: ( PROTO_KW ^ type IDENT PG ! parametres PD !)
            // /home/heyoen/workspace/VSL/bin/frontend/VslParser.g:33:18: PROTO_KW ^ type IDENT PG ! parametres PD !
            {
            root_0 = (Object)adaptor.nil();


            PROTO_KW11=(Token)match(input,PROTO_KW,FOLLOW_PROTO_KW_in_prototype243); 
            PROTO_KW11_tree = 
            (Object)adaptor.create(PROTO_KW11)
            ;
            root_0 = (Object)adaptor.becomeRoot(PROTO_KW11_tree, root_0);


            pushFollow(FOLLOW_type_in_prototype246);
            type12=type();

            state._fsp--;

            adaptor.addChild(root_0, type12.getTree());

            IDENT13=(Token)match(input,IDENT,FOLLOW_IDENT_in_prototype248); 
            IDENT13_tree = 
            (Object)adaptor.create(IDENT13)
            ;
            adaptor.addChild(root_0, IDENT13_tree);


            PG14=(Token)match(input,PG,FOLLOW_PG_in_prototype250); 

            pushFollow(FOLLOW_parametres_in_prototype253);
            parametres15=parametres();

            state._fsp--;

            adaptor.addChild(root_0, parametres15.getTree());

            PD16=(Token)match(input,PD,FOLLOW_PD_in_prototype255); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "prototype"


    public static class type_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "type"
    // /home/heyoen/workspace/VSL/bin/frontend/VslParser.g:35:1: type : ( INT_KW ^| VOID_KW ^);
    public final VslParser.type_return type() throws RecognitionException {
        VslParser.type_return retval = new VslParser.type_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token INT_KW17=null;
        Token VOID_KW18=null;

        Object INT_KW17_tree=null;
        Object VOID_KW18_tree=null;

        try {
            // /home/heyoen/workspace/VSL/bin/frontend/VslParser.g:35:16: ( INT_KW ^| VOID_KW ^)
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==INT_KW) ) {
                alt3=1;
            }
            else if ( (LA3_0==VOID_KW) ) {
                alt3=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }
            switch (alt3) {
                case 1 :
                    // /home/heyoen/workspace/VSL/bin/frontend/VslParser.g:35:18: INT_KW ^
                    {
                    root_0 = (Object)adaptor.nil();


                    INT_KW17=(Token)match(input,INT_KW,FOLLOW_INT_KW_in_type275); 
                    INT_KW17_tree = 
                    (Object)adaptor.create(INT_KW17)
                    ;
                    root_0 = (Object)adaptor.becomeRoot(INT_KW17_tree, root_0);


                    }
                    break;
                case 2 :
                    // /home/heyoen/workspace/VSL/bin/frontend/VslParser.g:35:28: VOID_KW ^
                    {
                    root_0 = (Object)adaptor.nil();


                    VOID_KW18=(Token)match(input,VOID_KW,FOLLOW_VOID_KW_in_type280); 
                    VOID_KW18_tree = 
                    (Object)adaptor.create(VOID_KW18)
                    ;
                    root_0 = (Object)adaptor.becomeRoot(VOID_KW18_tree, root_0);


                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "type"


    public static class parametres_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "parametres"
    // /home/heyoen/workspace/VSL/bin/frontend/VslParser.g:37:1: parametres : ( parametre ( VIRG parametre ) -> ^( PARAMETRE parametre ) | -> ^( PARAMETRE ) );
    public final VslParser.parametres_return parametres() throws RecognitionException {
        VslParser.parametres_return retval = new VslParser.parametres_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token VIRG20=null;
        VslParser.parametre_return parametre19 =null;

        VslParser.parametre_return parametre21 =null;


        Object VIRG20_tree=null;
        RewriteRuleTokenStream stream_VIRG=new RewriteRuleTokenStream(adaptor,"token VIRG");
        RewriteRuleSubtreeStream stream_parametre=new RewriteRuleSubtreeStream(adaptor,"rule parametre");
        try {
            // /home/heyoen/workspace/VSL/bin/frontend/VslParser.g:37:16: ( parametre ( VIRG parametre ) -> ^( PARAMETRE parametre ) | -> ^( PARAMETRE ) )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==IDENT) ) {
                alt4=1;
            }
            else if ( (LA4_0==PD) ) {
                alt4=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;

            }
            switch (alt4) {
                case 1 :
                    // /home/heyoen/workspace/VSL/bin/frontend/VslParser.g:37:18: parametre ( VIRG parametre )
                    {
                    pushFollow(FOLLOW_parametre_in_parametres293);
                    parametre19=parametre();

                    state._fsp--;

                    stream_parametre.add(parametre19.getTree());

                    // /home/heyoen/workspace/VSL/bin/frontend/VslParser.g:37:28: ( VIRG parametre )
                    // /home/heyoen/workspace/VSL/bin/frontend/VslParser.g:37:29: VIRG parametre
                    {
                    VIRG20=(Token)match(input,VIRG,FOLLOW_VIRG_in_parametres296);  
                    stream_VIRG.add(VIRG20);


                    pushFollow(FOLLOW_parametre_in_parametres298);
                    parametre21=parametre();

                    state._fsp--;

                    stream_parametre.add(parametre21.getTree());

                    }


                    // AST REWRITE
                    // elements: parametre
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 38:18: -> ^( PARAMETRE parametre )
                    {
                        // /home/heyoen/workspace/VSL/bin/frontend/VslParser.g:38:21: ^( PARAMETRE parametre )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(
                        (Object)adaptor.create(PARAMETRE, "PARAMETRE")
                        , root_1);

                        adaptor.addChild(root_1, stream_parametre.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;

                    }
                    break;
                case 2 :
                    // /home/heyoen/workspace/VSL/bin/frontend/VslParser.g:38:46: 
                    {
                    // AST REWRITE
                    // elements: 
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 38:46: -> ^( PARAMETRE )
                    {
                        // /home/heyoen/workspace/VSL/bin/frontend/VslParser.g:38:49: ^( PARAMETRE )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(
                        (Object)adaptor.create(PARAMETRE, "PARAMETRE")
                        , root_1);

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "parametres"


    public static class parametre_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "parametre"
    // /home/heyoen/workspace/VSL/bin/frontend/VslParser.g:40:1: parametre : ( IDENT | IDENT CG CD -> ^( TABLEAU IDENT ) );
    public final VslParser.parametre_return parametre() throws RecognitionException {
        VslParser.parametre_return retval = new VslParser.parametre_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token IDENT22=null;
        Token IDENT23=null;
        Token CG24=null;
        Token CD25=null;

        Object IDENT22_tree=null;
        Object IDENT23_tree=null;
        Object CG24_tree=null;
        Object CD25_tree=null;
        RewriteRuleTokenStream stream_CD=new RewriteRuleTokenStream(adaptor,"token CD");
        RewriteRuleTokenStream stream_IDENT=new RewriteRuleTokenStream(adaptor,"token IDENT");
        RewriteRuleTokenStream stream_CG=new RewriteRuleTokenStream(adaptor,"token CG");

        try {
            // /home/heyoen/workspace/VSL/bin/frontend/VslParser.g:40:16: ( IDENT | IDENT CG CD -> ^( TABLEAU IDENT ) )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==IDENT) ) {
                int LA5_1 = input.LA(2);

                if ( (LA5_1==CG) ) {
                    alt5=2;
                }
                else if ( (LA5_1==PD||LA5_1==VIRG) ) {
                    alt5=1;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 5, 1, input);

                    throw nvae;

                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;

            }
            switch (alt5) {
                case 1 :
                    // /home/heyoen/workspace/VSL/bin/frontend/VslParser.g:40:18: IDENT
                    {
                    root_0 = (Object)adaptor.nil();


                    IDENT22=(Token)match(input,IDENT,FOLLOW_IDENT_in_parametre345); 
                    IDENT22_tree = 
                    (Object)adaptor.create(IDENT22)
                    ;
                    adaptor.addChild(root_0, IDENT22_tree);


                    }
                    break;
                case 2 :
                    // /home/heyoen/workspace/VSL/bin/frontend/VslParser.g:40:26: IDENT CG CD
                    {
                    IDENT23=(Token)match(input,IDENT,FOLLOW_IDENT_in_parametre349);  
                    stream_IDENT.add(IDENT23);


                    CG24=(Token)match(input,CG,FOLLOW_CG_in_parametre351);  
                    stream_CG.add(CG24);


                    CD25=(Token)match(input,CD,FOLLOW_CD_in_parametre353);  
                    stream_CD.add(CD25);


                    // AST REWRITE
                    // elements: IDENT
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 41:18: -> ^( TABLEAU IDENT )
                    {
                        // /home/heyoen/workspace/VSL/bin/frontend/VslParser.g:41:21: ^( TABLEAU IDENT )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(
                        (Object)adaptor.create(TABLEAU, "TABLEAU")
                        , root_1);

                        adaptor.addChild(root_1, 
                        stream_IDENT.nextNode()
                        );

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "parametre"


    public static class instruction_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "instruction"
    // /home/heyoen/workspace/VSL/bin/frontend/VslParser.g:43:1: instruction : ( affectation | retourne | impression | lecture | conditionnelle | appelFonction | iteration | bloc );
    public final VslParser.instruction_return instruction() throws RecognitionException {
        VslParser.instruction_return retval = new VslParser.instruction_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        VslParser.affectation_return affectation26 =null;

        VslParser.retourne_return retourne27 =null;

        VslParser.impression_return impression28 =null;

        VslParser.lecture_return lecture29 =null;

        VslParser.conditionnelle_return conditionnelle30 =null;

        VslParser.appelFonction_return appelFonction31 =null;

        VslParser.iteration_return iteration32 =null;

        VslParser.bloc_return bloc33 =null;



        try {
            // /home/heyoen/workspace/VSL/bin/frontend/VslParser.g:43:16: ( affectation | retourne | impression | lecture | conditionnelle | appelFonction | iteration | bloc )
            int alt6=8;
            switch ( input.LA(1) ) {
            case IDENT:
                {
                int LA6_1 = input.LA(2);

                if ( (LA6_1==ASSIGN_KW||LA6_1==CG) ) {
                    alt6=1;
                }
                else if ( (LA6_1==PG) ) {
                    alt6=6;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 6, 1, input);

                    throw nvae;

                }
                }
                break;
            case RETURN_KW:
                {
                alt6=2;
                }
                break;
            case PRINT_KW:
                {
                alt6=3;
                }
                break;
            case READ_KW:
                {
                alt6=4;
                }
                break;
            case IF_KW:
                {
                alt6=5;
                }
                break;
            case WHILE_KW:
                {
                alt6=7;
                }
                break;
            case AG:
                {
                alt6=8;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;

            }

            switch (alt6) {
                case 1 :
                    // /home/heyoen/workspace/VSL/bin/frontend/VslParser.g:43:18: affectation
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_affectation_in_instruction390);
                    affectation26=affectation();

                    state._fsp--;

                    adaptor.addChild(root_0, affectation26.getTree());

                    }
                    break;
                case 2 :
                    // /home/heyoen/workspace/VSL/bin/frontend/VslParser.g:43:32: retourne
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_retourne_in_instruction394);
                    retourne27=retourne();

                    state._fsp--;

                    adaptor.addChild(root_0, retourne27.getTree());

                    }
                    break;
                case 3 :
                    // /home/heyoen/workspace/VSL/bin/frontend/VslParser.g:43:43: impression
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_impression_in_instruction398);
                    impression28=impression();

                    state._fsp--;

                    adaptor.addChild(root_0, impression28.getTree());
